--- a/package.json
+++ b/package.json
@@ -1,62 +1,63 @@
 {
-  "name": "webd",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
-    "axios": "^0.26.1",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "gh-pages": "^4.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.5",
-    "nodemon": "^2.0.20",
-    "react": "^17.0.2",
-    "react-bootstrap": "^2.3.0",
-    "react-currency-format": "^1.1.0",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-redux": "^8.0.2",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.0",
-    "react-scroll": "^1.8.7",
-    "react-toastify": "^9.0.8",
-    "react-tooltip": "^5.8.1",
-    "redux": "^4.2.0",
-    "stream-browserify": "^3.0.0",
-    "swiper": "^8.0.6",
-    "typewriter-effect": "^2.19.0",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "homepage": "http://kushwahashashank.github.io/ARTHUB",
+   "name": "webd",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@testing-library/jest-dom": "^5.16.2",
+      "@testing-library/react": "^12.1.2",
+      "@testing-library/user-event": "^13.5.0",
+      "aos": "^2.3.4",
+      "axios": "^0.26.1",
+      "bcryptjs": "^2.4.3",
+      "dotenv": "^16.0.3",
+      "express": "^4.18.2",
+      "gh-pages": "^4.0.0",
+      "jsonwebtoken": "^8.5.1",
+      "mongoose": "^6.6.5",
+      "nodemon": "^2.0.20",
+      "react": "^17.0.2",
+      "react-bootstrap": "^2.3.0",
+      "react-currency-format": "^1.1.0",
+      "react-dom": "^17.0.2",
+      "react-icons": "^4.3.1",
+      "react-redux": "^8.0.2",
+      "react-router": "^6.2.1",
+      "react-router-dom": "^6.3.0",
+      "react-scripts": "^5.0.0",
+      "react-scroll": "^1.8.7",
+      "react-toastify": "^9.0.8",
+      "react-tooltip": "^5.8.1",
+      "redux": "^4.2.0",
+      "stream-browserify": "^3.0.0",
+      "swiper": "^8.0.6",
+      "typewriter-effect": "^2.19.0",
+      "web-vitals": "^2.1.4"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   }
 }
